--- a/appstate.json
+++ b/appstate.json
@@ -1,12 +1,12 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%2261581472800892%22%3A%22CSdAN3B1%22%2C%2261582632423896%22%3A%227cp8HIhS%22%2C%22100091661496284%22%3A%22PIp6ZwHi%22%2C%2261582837655459%22%3A%22zRRUgDax%22%7D",
+        "value": "%7B%2261581472800892%22%3A%22CSdAN3B1%22%2C%2261582632423896%22%3A%227cp8HIhS%22%2C%22100091661496284%22%3A%22PIp6ZwHi%22%2C%2261582837655459%22%3A%22xqUuzfjw%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-10-29T09:26:48.753Z",
-        "lastAccessed": "2025-10-29T09:26:48.754Z"
+        "creation": "2025-10-29T11:44:45.401Z",
+        "lastAccessed": "2025-10-29T11:44:45.402Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-29T09:26:48.754Z",
-        "lastAccessed": "2025-10-29T09:26:48.754Z"
+        "creation": "2025-10-29T11:44:45.402Z",
+        "lastAccessed": "2025-10-29T11:44:45.402Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-29T09:26:48.754Z",
-        "lastAccessed": "2025-10-29T09:26:48.754Z"
+        "creation": "2025-10-29T11:44:45.402Z",
+        "lastAccessed": "2025-10-29T11:44:45.402Z"
     },
     {
         "key": "vpd",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-29T09:26:48.754Z",
-        "lastAccessed": "2025-10-29T09:26:48.754Z"
+        "creation": "2025-10-29T11:44:45.402Z",
+        "lastAccessed": "2025-10-29T11:44:45.402Z"
     },
     {
         "key": "ps_l",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-29T09:26:48.754Z",
-        "lastAccessed": "2025-10-29T09:26:48.754Z"
+        "creation": "2025-10-29T11:44:45.402Z",
+        "lastAccessed": "2025-10-29T11:44:45.402Z"
     },
     {
         "key": "ps_n",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-29T09:26:48.754Z",
-        "lastAccessed": "2025-10-29T09:26:48.754Z"
+        "creation": "2025-10-29T11:44:45.402Z",
+        "lastAccessed": "2025-10-29T11:44:45.402Z"
     },
     {
         "key": "locale",
@@ -59,26 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-29T09:26:48.754Z",
-        "lastAccessed": "2025-10-29T09:26:48.754Z"
-    },
-    {
-        "key": "c_user",
-        "value": "61582837655459",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-10-29T09:26:48.754Z",
-        "lastAccessed": "2025-10-29T09:26:48.754Z"
-    },
-    {
-        "key": "xs",
-        "value": "49%3ALVgjJd-8_tUhpA%3A2%3A1761581658%3A-1%3A-1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-10-29T09:26:48.754Z",
-        "lastAccessed": "2025-10-29T09:26:48.754Z"
+        "creation": "2025-10-29T11:44:45.402Z",
+        "lastAccessed": "2025-10-29T11:44:45.402Z"
     },
     {
         "key": "pas",
@@ -86,34 +68,70 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-29T09:26:48.754Z",
-        "lastAccessed": "2025-10-29T09:26:48.754Z"
+        "creation": "2025-10-29T11:44:45.402Z",
+        "lastAccessed": "2025-10-29T11:44:45.402Z"
+    },
+    {
+        "key": "m_pixel_ratio",
+        "value": "2.75",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-10-29T11:44:45.402Z",
+        "lastAccessed": "2025-10-29T11:44:45.402Z"
+    },
+    {
+        "key": "wd",
+        "value": "393x869",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-10-29T11:44:45.402Z",
+        "lastAccessed": "2025-10-29T11:44:45.402Z"
+    },
+    {
+        "key": "c_user",
+        "value": "61582837655459",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-10-29T11:44:45.402Z",
+        "lastAccessed": "2025-10-29T11:44:45.402Z"
+    },
+    {
+        "key": "xs",
+        "value": "25%3AC1mOOi5r037_Gw%3A2%3A1761737685%3A-1%3A-1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-10-29T11:44:45.402Z",
+        "lastAccessed": "2025-10-29T11:44:45.402Z"
     },
     {
         "key": "fr",
-        "value": "0oiyAjO5FJyPqfu1L.AWcW4YewCzG_sGwTvVI36J5qpkJ80fyQqgIAu8ak0gOq515gApU.Bo87VN..AAA.0.0.BpAGUj.AWfebobqvOLOw9MFEBk72ObEcpk",
+        "value": "0oiyAjO5FJyPqfu1L.AWdXY43udY78O_hesySuEETiTP1lpVEmjeLlMxVjgSUFQGSHks4.Bo87VN..AAA.0.0.BpAfvY.AWdo30PZiYGxsy9u1VHXqqdo4X8",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-29T09:26:48.754Z",
-        "lastAccessed": "2025-10-29T09:26:48.754Z"
-    },
-    {
-        "key": "fbl_st",
-        "value": "101425175%3BT%3A29360559",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-10-29T09:26:48.754Z",
-        "lastAccessed": "2025-10-29T09:26:48.754Z"
+        "creation": "2025-10-29T11:44:45.402Z",
+        "lastAccessed": "2025-10-29T11:44:45.402Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2965%3Btimestamp%3A1761633571",
+        "value": "v2%3Bclient_version%3A2968%3Btimestamp%3A1761737689",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-29T09:26:48.754Z",
-        "lastAccessed": "2025-10-29T09:26:48.754Z"
+        "creation": "2025-10-29T11:44:45.402Z",
+        "lastAccessed": "2025-10-29T11:44:45.402Z"
+    },
+    {
+        "key": "fbl_st",
+        "value": "101631620%3BT%3A29362295",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-10-29T11:44:45.402Z",
+        "lastAccessed": "2025-10-29T11:44:45.402Z"
     }
 ]
