--- a/appstate.json
+++ b/appstate.json
@@ -1,12 +1,12 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%2261581472800892%22%3A%22CSdAN3B1%22%2C%2261582632423896%22%3A%227cp8HIhS%22%2C%22100091661496284%22%3A%22PIp6ZwHi%22%2C%2261582837655459%22%3A%2271ngS7Qr%22%7D",
+        "value": "%7B%2261581472800892%22%3A%22CSdAN3B1%22%2C%2261582632423896%22%3A%227cp8HIhS%22%2C%22100091661496284%22%3A%22PIp6ZwHi%22%2C%2261582837655459%22%3A%223S39bT8C%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-10-30T08:15:25.158Z",
-        "lastAccessed": "2025-10-30T08:15:25.158Z"
+        "creation": "2025-10-30T10:00:03.880Z",
+        "lastAccessed": "2025-10-30T10:00:03.880Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-30T08:15:25.158Z",
-        "lastAccessed": "2025-10-30T08:15:25.158Z"
+        "creation": "2025-10-30T10:00:03.881Z",
+        "lastAccessed": "2025-10-30T10:00:03.881Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-30T08:15:25.158Z",
-        "lastAccessed": "2025-10-30T08:15:25.158Z"
+        "creation": "2025-10-30T10:00:03.881Z",
+        "lastAccessed": "2025-10-30T10:00:03.881Z"
     },
     {
         "key": "vpd",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-30T08:15:25.158Z",
-        "lastAccessed": "2025-10-30T08:15:25.158Z"
+        "creation": "2025-10-30T10:00:03.881Z",
+        "lastAccessed": "2025-10-30T10:00:03.881Z"
     },
     {
         "key": "ps_l",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-30T08:15:25.158Z",
-        "lastAccessed": "2025-10-30T08:15:25.158Z"
+        "creation": "2025-10-30T10:00:03.881Z",
+        "lastAccessed": "2025-10-30T10:00:03.881Z"
     },
     {
         "key": "ps_n",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-30T08:15:25.158Z",
-        "lastAccessed": "2025-10-30T08:15:25.158Z"
+        "creation": "2025-10-30T10:00:03.881Z",
+        "lastAccessed": "2025-10-30T10:00:03.881Z"
     },
     {
         "key": "locale",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-30T08:15:25.158Z",
-        "lastAccessed": "2025-10-30T08:15:25.158Z"
+        "creation": "2025-10-30T10:00:03.881Z",
+        "lastAccessed": "2025-10-30T10:00:03.881Z"
     },
     {
         "key": "pas",
@@ -68,8 +68,26 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-30T08:15:25.158Z",
-        "lastAccessed": "2025-10-30T08:15:25.158Z"
+        "creation": "2025-10-30T10:00:03.881Z",
+        "lastAccessed": "2025-10-30T10:00:03.881Z"
+    },
+    {
+        "key": "m_pixel_ratio",
+        "value": "2.75",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-10-30T10:00:03.881Z",
+        "lastAccessed": "2025-10-30T10:00:03.881Z"
+    },
+    {
+        "key": "wd",
+        "value": "393x869",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-10-30T10:00:03.881Z",
+        "lastAccessed": "2025-10-30T10:00:03.881Z"
     },
     {
         "key": "c_user",
@@ -77,43 +95,43 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-30T08:15:25.158Z",
-        "lastAccessed": "2025-10-30T08:15:25.158Z"
+        "creation": "2025-10-30T10:00:03.881Z",
+        "lastAccessed": "2025-10-30T10:00:03.881Z"
     },
     {
         "key": "xs",
-        "value": "15%3AbBVPymjWAI7pMQ%3A2%3A1761746829%3A-1%3A-1",
+        "value": "24%3AmLmMbZiuE_hwgw%3A2%3A1761818365%3A-1%3A-1",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-30T08:15:25.158Z",
-        "lastAccessed": "2025-10-30T08:15:25.158Z"
+        "creation": "2025-10-30T10:00:03.881Z",
+        "lastAccessed": "2025-10-30T10:00:03.881Z"
     },
     {
         "key": "fr",
-        "value": "0oiyAjO5FJyPqfu1L.AWeef6dEVeg0p0y6PXWe62ly2YRbFBQ4sjUJQVNG3418jM28UXI.Bo87VN..AAA.0.0.BpAx5m.AWfkqCT1qlH4nAaw_lkfjtkYPEs",
+        "value": "0oiyAjO5FJyPqfu1L.AWc-JBSn1VQDqdKhxS-45uFNzBb1R6y_bDI8aqRl9eJthh35Y7k.Bo87VN..AAA.0.0.BpAzcB.AWceDWqzO5H3Gqv-YbMHUSECVik",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-30T08:15:25.158Z",
-        "lastAccessed": "2025-10-30T08:15:25.158Z"
+        "creation": "2025-10-30T10:00:03.881Z",
+        "lastAccessed": "2025-10-30T10:00:03.881Z"
     },
     {
         "key": "fbl_st",
-        "value": "101731070%3BT%3A29363534",
+        "value": "101432692%3BT%3A29363639",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-30T08:15:25.158Z",
-        "lastAccessed": "2025-10-30T08:15:25.158Z"
+        "creation": "2025-10-30T10:00:03.881Z",
+        "lastAccessed": "2025-10-30T10:00:03.881Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2968%3Btimestamp%3A1761812070",
+        "value": "v2%3Bclient_version%3A2968%3Btimestamp%3A1761818369",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-30T08:15:25.158Z",
-        "lastAccessed": "2025-10-30T08:15:25.158Z"
+        "creation": "2025-10-30T10:00:03.881Z",
+        "lastAccessed": "2025-10-30T10:00:03.881Z"
     }
 ]
