--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-10-30T10:00:03.880Z",
-        "lastAccessed": "2025-10-30T10:00:03.880Z"
+        "creation": "2025-10-30T14:14:56.022Z",
+        "lastAccessed": "2025-10-30T14:14:56.023Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-30T10:00:03.881Z",
-        "lastAccessed": "2025-10-30T10:00:03.881Z"
+        "creation": "2025-10-30T14:14:56.023Z",
+        "lastAccessed": "2025-10-30T14:14:56.023Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-30T10:00:03.881Z",
-        "lastAccessed": "2025-10-30T10:00:03.881Z"
+        "creation": "2025-10-30T14:14:56.023Z",
+        "lastAccessed": "2025-10-30T14:14:56.023Z"
     },
     {
         "key": "vpd",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-30T10:00:03.881Z",
-        "lastAccessed": "2025-10-30T10:00:03.881Z"
+        "creation": "2025-10-30T14:14:56.023Z",
+        "lastAccessed": "2025-10-30T14:14:56.023Z"
     },
     {
         "key": "ps_l",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-30T10:00:03.881Z",
-        "lastAccessed": "2025-10-30T10:00:03.881Z"
+        "creation": "2025-10-30T14:14:56.023Z",
+        "lastAccessed": "2025-10-30T14:14:56.023Z"
     },
     {
         "key": "ps_n",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-30T10:00:03.881Z",
-        "lastAccessed": "2025-10-30T10:00:03.881Z"
+        "creation": "2025-10-30T14:14:56.023Z",
+        "lastAccessed": "2025-10-30T14:14:56.023Z"
     },
     {
         "key": "locale",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-30T10:00:03.881Z",
-        "lastAccessed": "2025-10-30T10:00:03.881Z"
+        "creation": "2025-10-30T14:14:56.023Z",
+        "lastAccessed": "2025-10-30T14:14:56.023Z"
     },
     {
         "key": "pas",
@@ -68,26 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-30T10:00:03.881Z",
-        "lastAccessed": "2025-10-30T10:00:03.881Z"
-    },
-    {
-        "key": "m_pixel_ratio",
-        "value": "2.75",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-10-30T10:00:03.881Z",
-        "lastAccessed": "2025-10-30T10:00:03.881Z"
-    },
-    {
-        "key": "wd",
-        "value": "393x869",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-10-30T10:00:03.881Z",
-        "lastAccessed": "2025-10-30T10:00:03.881Z"
+        "creation": "2025-10-30T14:14:56.023Z",
+        "lastAccessed": "2025-10-30T14:14:56.023Z"
     },
     {
         "key": "c_user",
@@ -95,8 +77,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-30T10:00:03.881Z",
-        "lastAccessed": "2025-10-30T10:00:03.881Z"
+        "creation": "2025-10-30T14:14:56.023Z",
+        "lastAccessed": "2025-10-30T14:14:56.023Z"
     },
     {
         "key": "xs",
@@ -104,34 +86,34 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-30T10:00:03.881Z",
-        "lastAccessed": "2025-10-30T10:00:03.881Z"
+        "creation": "2025-10-30T14:14:56.023Z",
+        "lastAccessed": "2025-10-30T14:14:56.023Z"
     },
     {
         "key": "fr",
-        "value": "0oiyAjO5FJyPqfu1L.AWc-JBSn1VQDqdKhxS-45uFNzBb1R6y_bDI8aqRl9eJthh35Y7k.Bo87VN..AAA.0.0.BpAzcB.AWceDWqzO5H3Gqv-YbMHUSECVik",
+        "value": "0oiyAjO5FJyPqfu1L.AWdrbt_Lyn109ERO7dJwToMIhj_FUnPjDB78oaH_L_FLluRIzf0.Bo87VN..AAA.0.0.BpA1jM.AWdZgdsJ3k4IYNpTTpEuoEldFO4",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-30T10:00:03.881Z",
-        "lastAccessed": "2025-10-30T10:00:03.881Z"
-    },
-    {
-        "key": "fbl_st",
-        "value": "101432692%3BT%3A29363639",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-10-30T10:00:03.881Z",
-        "lastAccessed": "2025-10-30T10:00:03.881Z"
+        "creation": "2025-10-30T14:14:56.023Z",
+        "lastAccessed": "2025-10-30T14:14:56.023Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2968%3Btimestamp%3A1761818369",
+        "value": "v2%3Bclient_version%3A2968%3Btimestamp%3A1761827020",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-30T10:00:03.881Z",
-        "lastAccessed": "2025-10-30T10:00:03.881Z"
+        "creation": "2025-10-30T14:14:56.023Z",
+        "lastAccessed": "2025-10-30T14:14:56.023Z"
+    },
+    {
+        "key": "fbl_st",
+        "value": "101627238%3BT%3A29363783",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-10-30T14:14:56.023Z",
+        "lastAccessed": "2025-10-30T14:14:56.023Z"
     }
 ]
