--- a/appstate.json
+++ b/appstate.json
@@ -1,12 +1,12 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%2261581472800892%22%3A%22CSdAN3B1%22%2C%2261582632423896%22%3A%227cp8HIhS%22%2C%22100091661496284%22%3A%22PIp6ZwHi%22%2C%2261582837655459%22%3A%223S39bT8C%22%7D",
+        "value": "%7B%2261581472800892%22%3A%22CSdAN3B1%22%2C%2261582632423896%22%3A%227cp8HIhS%22%2C%22100091661496284%22%3A%22PIp6ZwHi%22%2C%2261582837655459%22%3A%2218Rzvp5B%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-10-30T14:14:56.022Z",
-        "lastAccessed": "2025-10-30T14:14:56.023Z"
+        "creation": "2025-10-30T14:20:33.544Z",
+        "lastAccessed": "2025-10-30T14:20:33.544Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-30T14:14:56.023Z",
-        "lastAccessed": "2025-10-30T14:14:56.023Z"
+        "creation": "2025-10-30T14:20:33.544Z",
+        "lastAccessed": "2025-10-30T14:20:33.544Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-30T14:14:56.023Z",
-        "lastAccessed": "2025-10-30T14:14:56.023Z"
+        "creation": "2025-10-30T14:20:33.544Z",
+        "lastAccessed": "2025-10-30T14:20:33.544Z"
     },
     {
         "key": "vpd",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-30T14:14:56.023Z",
-        "lastAccessed": "2025-10-30T14:14:56.023Z"
+        "creation": "2025-10-30T14:20:33.544Z",
+        "lastAccessed": "2025-10-30T14:20:33.544Z"
     },
     {
         "key": "ps_l",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-30T14:14:56.023Z",
-        "lastAccessed": "2025-10-30T14:14:56.023Z"
+        "creation": "2025-10-30T14:20:33.544Z",
+        "lastAccessed": "2025-10-30T14:20:33.544Z"
     },
     {
         "key": "ps_n",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-30T14:14:56.023Z",
-        "lastAccessed": "2025-10-30T14:14:56.023Z"
+        "creation": "2025-10-30T14:20:33.544Z",
+        "lastAccessed": "2025-10-30T14:20:33.544Z"
     },
     {
         "key": "locale",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-30T14:14:56.023Z",
-        "lastAccessed": "2025-10-30T14:14:56.023Z"
+        "creation": "2025-10-30T14:20:33.544Z",
+        "lastAccessed": "2025-10-30T14:20:33.544Z"
     },
     {
         "key": "pas",
@@ -68,52 +68,43 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-30T14:14:56.023Z",
-        "lastAccessed": "2025-10-30T14:14:56.023Z"
+        "creation": "2025-10-30T14:20:33.544Z",
+        "lastAccessed": "2025-10-30T14:20:33.544Z"
     },
     {
-        "key": "c_user",
-        "value": "61582837655459",
+        "key": "m_pixel_ratio",
+        "value": "2.75",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-30T14:14:56.023Z",
-        "lastAccessed": "2025-10-30T14:14:56.023Z"
+        "creation": "2025-10-30T14:20:33.544Z",
+        "lastAccessed": "2025-10-30T14:20:33.544Z"
     },
     {
-        "key": "xs",
-        "value": "24%3AmLmMbZiuE_hwgw%3A2%3A1761818365%3A-1%3A-1",
+        "key": "wd",
+        "value": "393x869",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-30T14:14:56.023Z",
-        "lastAccessed": "2025-10-30T14:14:56.023Z"
-    },
-    {
-        "key": "fr",
-        "value": "0oiyAjO5FJyPqfu1L.AWdrbt_Lyn109ERO7dJwToMIhj_FUnPjDB78oaH_L_FLluRIzf0.Bo87VN..AAA.0.0.BpA1jM.AWdZgdsJ3k4IYNpTTpEuoEldFO4",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-10-30T14:14:56.023Z",
-        "lastAccessed": "2025-10-30T14:14:56.023Z"
+        "creation": "2025-10-30T14:20:33.544Z",
+        "lastAccessed": "2025-10-30T14:20:33.544Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2968%3Btimestamp%3A1761827020",
+        "value": "v2%3Bclient_version%3A2968%3Btimestamp%3A1761833742",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-30T14:14:56.023Z",
-        "lastAccessed": "2025-10-30T14:14:56.023Z"
+        "creation": "2025-10-30T14:20:33.544Z",
+        "lastAccessed": "2025-10-30T14:20:33.544Z"
     },
     {
-        "key": "fbl_st",
-        "value": "101627238%3BT%3A29363783",
+        "key": "fr",
+        "value": "0oiyAjO5FJyPqfu1L.AWd6wT-CB5vSjnVN67gC79RjStY1J4AUPDwcUgpC0UuuSYXCIGs.Bo87VN..AAA.0.0.BpA3Pt.AWcrFp7OxfO0nkn-bjn9XvA1KBI",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-30T14:14:56.023Z",
-        "lastAccessed": "2025-10-30T14:14:56.023Z"
+        "creation": "2025-10-30T14:20:33.544Z",
+        "lastAccessed": "2025-10-30T14:20:33.544Z"
     }
 ]
